--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@
                   <div class="tier-value">R$ 93.28</div>
                 </div>
                 <div class="tier-container">
+                  <div class="tier" id="tier-0-5">
+                    <div class="tier-header">0-5 m³</div>
+                    <div class="tier-rate">R$ 0.00/m³</div>
+                    <div class="tier-consumption">5 m³</div>
+                    <div class="tier-value">R$ 0.00</div>
+                  </div>
                   <div class="tier" id="tier-6-10">
                     <div class="tier-header">6-10 m³</div>
                     <div class="tier-rate">R$ 2.88/m³</div>
