--- a/index.html
+++ b/index.html
@@ -11,37 +11,55 @@
       <h1>Calculadora de Condomínio</h1>
 
       <div class="calculator">
+        <div class="section readings-section">
+          <h2>Leituras do Mês</h2>
+          <div class="readings-grid">
+            <div class="reading-card gas">
+              <div class="reading-icon">🔥</div>
+              <label for="leitura-gas">Leitura do Gás</label>
+              <div class="input-with-unit">
+                <input type="number" id="leitura-gas" step="0.0001" value="5" />
+                <span class="unit">m³</span>
+              </div>
+            </div>
+            <div class="reading-card water-cold">
+              <div class="reading-icon">💧</div>
+              <label for="leitura-agua-fria">Leitura de Água Fria</label>
+              <div class="input-with-unit">
+                <input type="number" id="leitura-agua-fria" step="0.0001" value="11.7480" />
+                <span class="unit">m³</span>
+              </div>
+            </div>
+            <div class="reading-card water-hot">
+              <div class="reading-icon">♨️</div>
+              <label for="leitura-agua-quente">Leitura de Água Quente</label>
+              <div class="input-with-unit">
+                <input type="number" id="leitura-agua-quente" step="0.0001" value="10.1940" />
+                <span class="unit">m³</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="section global-section">
           <h2>Valores Globais</h2>
-          <div class="input-group">
-            <label for="valor-caldeira">Valor da Caldeira (R$):</label>
-            <input
-              type="number"
-              id="valor-caldeira"
-              step="0.01"
-              value="50302.38"
-            />
-          </div>
-          <div class="input-group">
-            <label for="total-agua-quente">Total de Água Quente (m³):</label>
-            <input
-              type="number"
-              id="total-agua-quente"
-              step="0.001"
-              value="667.012"
-            />
-          </div>
-          <div class="input-group">
-            <label for="valor-m3-gas">Valor do m³ de Gás (R$):</label>
-            <input type="number" id="valor-m3-gas" step="0.01" value="6.5048" />
+          <div class="global-grid">
+            <div class="input-group">
+              <label for="valor-caldeira">Valor da Caldeira (R$):</label>
+              <input type="number" id="valor-caldeira" step="0.01" value="50302.38" />
+            </div>
+            <div class="input-group">
+              <label for="total-agua-quente">Total de Água Quente (m³):</label>
+              <input type="number" id="total-agua-quente" step="0.001" value="667.012" />
+            </div>
+            <div class="input-group">
+              <label for="valor-m3-gas">Valor do m³ de Gás (R$):</label>
+              <input type="number" id="valor-m3-gas" step="0.01" value="6.5048" />
+            </div>
           </div>
         </div>
         <div class="section gas-section">
           <h2>Gás</h2>
-          <div class="input-group">
-            <label for="leitura-gas">Leitura do Gás (m³):</label>
-            <input type="number" id="leitura-gas" step="0.0001" value="5" />
-          </div>
           <div class="result-box">
             <div class="calculation">
               <span class="formula">Valor = Leitura × Tarifa</span>
@@ -58,25 +76,6 @@
 
         <div class="section water-section">
           <h2>Água e Esgoto</h2>
-          <div class="input-group">
-            <label for="leitura-agua-fria">Leitura de Água Fria (m³):</label>
-            <input
-              type="number"
-              id="leitura-agua-fria"
-              step="0.0001"
-              value="11.7480"
-            />
-          </div>
-          <div class="input-group">
-            <label for="leitura-agua-quente"
-              >Leitura de Água Quente (m³):</label
-            >
-            <input
-              type="number"
-              id="leitura-agua-quente"
-              step="0.0001"
-              value="10.1940"
-            />
           </div>
           <div class="result-box">
             <div class="calculation">
