refactor: merge base tier with first consumption tier and improve styling

--- a/index.html
+++ b/index.html
@@ -95,16 +95,12 @@
             <div class="calculation">
               <span class="formula">Tarifa Base + Faixas de Consumo</span>
               <div class="water-tiers">
-                <div class="tier base-tier">
-                  <div class="tier-header">Tarifa Base</div>
-                  <div class="tier-value">R$ 93.28</div>
-                </div>
                 <div class="tier-container">
-                  <div class="tier" id="tier-0-5">
+                  <div class="tier" id="tier-done">
                     <div class="tier-header">0-5 m³</div>
-                    <div class="tier-rate">R$ 0.00/m³</div>
-                    <div class="tier-consumption">5 m³</div>
-                    <div class="tier-value">R$ 0.00</div>
+                    <div class="tier-rate">Tarifa Base</div>
+                    <div class="tier-consumption"> até 5 m³</div>
+                    <div class="tier-value">R$ 93.28</div>
                   </div>
                   <div class="tier" id="tier-6-10">
                     <div class="tier-header">6-10 m³</div>
