--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <div class="global-grid">
               <div class="input-group">
                 <label for="valor-caldeira">Valor da Caldeira (R$):</label>
-                <input type="number" id="valor-caldeira" step="0.01" value="50302.38" />
+                <input type="number" id="valor-caldeira" step="0.01" value="47776.08" />
               </div>
               <div class="input-group">
                 <label for="total-agua-quente">Total de Água Quente (m³):</label>
-                <input type="number" id="total-agua-quente" step="0.001" value="667.012" />
+                <input type="number" id="total-agua-quente" step="0.001" value="709.785" />
               </div>
               <div class="input-group">
                 <label for="valor-m3-gas">Valor do m³ de Gás (R$):</label>
@@ -46,9 +46,9 @@
             </div>
             <div class="reading-card water-cold">
               <div class="reading-icon">💧</div>
-              <label for="leitura-agua-fria">Leitura de Água Fria</label>
+              <label for="leitura-agua-fria">Leitura de Água Sanepar (Quente + fria)</label>
               <div class="input-with-unit">
-                <input type="number" id="leitura-agua-fria" step="0.0001" value="11.7480" />
+                <input type="number" id="leitura-agua-fria" step="0.0001" value="23.7480" />
                 <span class="unit">m³</span>
               </div>
             </div>
